--- a/views/duels/show.ejs
+++ b/views/duels/show.ejs
@@ -13,13 +13,21 @@
             </div>
     </div>
     <form action="/duels/<%= duel._id%>/votes" method="POST">
+            <div class="radio">
+                <label><strong><input type="radio" name=vote value=1><%= duel.name1 %></strong></label>    
+                <span class="float-right"><strong><%=support1%> vote</strong></span>
+            </div>
+        <div class="progress">
+            <div class="progress-bar w-<%=rate1%>" role="progressbar" aria-valuemin="0" aria-valuemax="100"></div>
+        </div> 
         <div class="radio">
-            <label><input type="radio" name=vote value=1><%= duel.name1 %></label>
+            <label><strong><input type="radio" name=vote value=2><%= duel.name2 %></strong></label>
+            <span class="float-right"><strong><%=support2%> vote</strong></span>
         </div>
-        <div class="radio">
-            <label><input type="radio" name=vote value=2><%= duel.name2 %></label>
+        <div class="progress">
+            <div class="progress-bar w-<%=rate2%>" role="progressbar" aria-valuenow="w-<%=rate2%>" aria-valuemin="0" aria-valuemax="100"></div>
         </div>
-        <button class="btn btn-lg btn-primary btn-sm">Submit!</button>
+        <button class="btn btn-lg btn-primary btn-sm" style="margin-top: 10px; margin-bottom: 10px ;">Submit!</button>
     </form>
     <div class="card p-3 mb-2 bg-light text-dark">
         <div class="text-right">
@@ -29,7 +37,6 @@
             <div class="row">
                     <div class="col-md-12">
                         <strong><%= comment.author.username%></strong>
-                        <span class="float-right">10 days ago</span>
                         <p><%= comment.text%></p>
                 </div>
             </div>
