--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -7,7 +7,7 @@
     </head>
     <body>
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                    <a class="navbar-brand" href="#">StartsBattle</a>
+                    <a class="navbar-brand" href="/">StartsBattle</a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                       <span class="navbar-toggler-icon"></span>
                     </button>
@@ -22,7 +22,7 @@
                           </li>
                       <% } else{ %>
                           <li class="nav-item">
-                            <a class="nav-link disabled">Signed in as<%= currentUser.username %></a>
+                            <a class="nav-link disabled">Signed in as <%= currentUser.username %></a>
                           </li>
                           <li class="nav-item">
                             <a class="nav-link" href="/logout">Logout</a>
