comment page deleted. css modified

--- a/views/duels/new.ejs
+++ b/views/duels/new.ejs
@@ -10,10 +10,10 @@
                     <input class="form-control" type="text" name=name2 placeholder="name of second star">
                 </div>
                 <div class="form-group">
-                  <input class="form-control" type="text" name=img1 placeholder="image of 1st star">
+                  <input class="form-control" type="text" name=img1 placeholder="image url of 1st star">
                 </div>
                 <div class="form-group">
-                  <input class="form-control" type="text" name=img2 placeholder="image of 2nd star">
+                  <input class="form-control" type="text" name=img2 placeholder="image url of 2nd star">
                 </div>
                 <button class="btn btn-lg btn-primary btn-block">Submit!</button>
             </form>
