--- a/views/main.ejs
+++ b/views/main.ejs
@@ -4,11 +4,11 @@
     <div class="jumbotron">
         <div class="container">
             <h1>Welcome to the battlefield!</h1>
-            <p class="lead">Vote for your preferred star</p>
+            <p class="lead">Vote for your favorite star</p>
             <hr class="my-4">
             <p class="lead">
                 <p class="lead">Create your own battle</p>
-                <a class="btn btn-primary btn-lg" href="/duels/new" role="button">Add new battles</a>
+                <a class="btn btn-secondary btn-lg" href="/duels/new" role="button">Add new battles</a>
             </p>
         </div>
     </div>
@@ -32,7 +32,7 @@
                         </p>
                     </div>
                     <p>
-                      <a href="/duels/<%= duel._id%>" class="btn btn-primary">More Info</a>
+                      <a href="/duels/<%= duel._id%>" class="btn btn-outline-dark">More Info</a>
                     </p>
                 </div>
             </div>
